apps/bux-console/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: bux-console-ingress
  labels:
    app: bux-console
  annotations:
    cert-manager.io/cluster-issuer: lets-encrypt
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - bux-console.4chain.pl
      secretName: bux-console-tls
  rules:
    - host: bux-console.4chain.pl
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: bux-console
                port:
                  name: web
